--- a/gtress.glade
+++ b/gtress.glade
@@ -182,6 +182,20 @@
               </packing>
             </child>
             <child>
+              <widget class="GtkLabel" id="GUI_FAILED">
+                <property name="width_request">80</property>
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="xalign">1</property>
+                <property name="label" translatable="yes">0</property>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">4</property>
+              </packing>
+            </child>
+            <child>
               <widget class="GtkAlignment" id="alignment1">
                 <property name="width_request">27</property>
                 <property name="visible">True</property>
@@ -193,7 +207,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">4</property>
+                <property name="position">5</property>
               </packing>
             </child>
           </widget>
